--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 *,
 *:before,
 *:after {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Nunito Sans', sans-serif;
 }
 
 :root {
@@ -20,3 +26,10 @@
   background-color: var(--color-gray-primary);
   height: 100vh;
 }
+
+/* h1 {
+  font-size: 1.5rem;
+  line-height: 1.16;
+  font-weight: 800;
+  color: var(--color-gray-primary);
+} */
