--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,7 @@
   --color-brand-primary: #1e83f7;
   --color-brand-secondary: #ffac1c;
   --color-gray-primary: #24252a;
+  --color-success-primary: #20bc08;
 }
 
 .layout-container {
