style:udpate table

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,3 +26,20 @@
 .layout-container__menu {
   @apply min-h-screen h-full bg-gray-primary;
 }
+
+.ant-table-wrapper {
+  width: 100%;
+}
+.ant-table-thead > tr > th {
+  background: #fff !important;
+  padding: 0 !important;
+  font-size: 18px !important;
+  font-weight: bold !important;
+  border-radius: 0 !important;
+  color: #656669 !important;
+}
+
+.ant-table-tbody > tr > td {
+  padding: 14px 0 !important;
+  background: #fff !important;
+}
