style:update wrapper

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 *,
 *:before,
@@ -20,11 +17,13 @@
 }
 
 .layout-container {
-  @apply min-h-screen;
+  min-height: 100vh;
 }
 
 .layout-container__menu {
-  @apply min-h-screen h-full bg-gray-primary;
+  min-height: 100vh;
+  background: var(--color-gray-primary);
+  height: 100%;
 }
 
 .ant-table-wrapper {
@@ -42,6 +41,7 @@
 .table .ant-table-tbody > tr > td {
   padding: 14px 0 !important;
   background: #fff !important;
+  font-size: 15px !important;
 }
 
 .visibility {
@@ -87,4 +87,26 @@
 
 .delete:hover {
   background: #f71e1e0f 0% 0% no-repeat padding-box;
+}
+
+.billableHrs-container {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+}
+.billableHrs-container__input {
+  width: 100%;
+  border-radius: 5px 0 0 5px;
+}
+.billableHrs-container__hrs {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 94px;
+  border-radius: 0 5px 5px 0;
+}
+
+.ant-form-item-label {
+  font-weight: 600;
 }
