--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,8 +31,7 @@
 }
 .table .ant-table-thead > tr > th {
   background: #fff !important;
-  padding-top: 0 !important;
-  padding-bottom: 0 !important;
+  padding: 0;
   font-size: 18px !important;
   font-weight: bold !important;
   border-radius: 0 !important;
