--- a/client/src/index.css
+++ b/client/src/index.css
@@ -114,3 +114,19 @@
 .ant-checkbox-wrapper {
   margin: 0 !important;
 }
+
+.qr-code {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #c3c1bf;
+  padding: 2px;
+  border-radius: 5px;
+  max-height: 118px;
+  max-width: 118px;
+}
+.qr-code-small {
+  width: 100%;
+  height: 100%;
+  max-height: 31px;
+  max-width: 31px;
+}
