--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,15 @@
   --color-success-primary: #20bc08;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0 !important;
+}
+
 .layout-container {
   min-height: 100vh;
 }
