--- a/client/src/index.css
+++ b/client/src/index.css
@@ -98,14 +98,16 @@ h6 {
   background: #f71e1e0f 0% 0% no-repeat padding-box;
 }
 
-.ant-modal-close {
+.ant-modal-close,
+.ant-drawer-close {
   height: 32px !important;
   width: 32px !important;
   background-color: #f71e1e1a !important;
   color: #f7541e !important;
   border: 1px solid #f71e1e1a !important;
 }
-.ant-modal-close:hover {
+.ant-modal-close:hover,
+.ant-drawer-close:hover {
   background: #f71e1e0f 0% 0% no-repeat padding-box !important;
 }
 
