--- a/client/src/index.css
+++ b/client/src/index.css
@@ -152,3 +152,28 @@ h6 {
   max-height: 31px;
   max-width: 31px;
 }
+
+.go-back-arrow {
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  border: 1px solid #c3c1bf;
+  cursor: pointer;
+  background: #f9f9f9;
+}
+.go-back-arrow:hover {
+  background: #eee;
+}
+
+.header {
+  padding: 0 22px;
+  background: #f9f9f9;
+  box-shadow: 0px 5px 15px #1201030f;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
