--- a/client/src/index.css
+++ b/client/src/index.css
@@ -210,17 +210,22 @@ h6 {
 }
 
 .overview-card-container {
-  border-radius: 5px;
-  padding: 12px 20px;
+  border-radius: 0.3125rem;
+  padding: 0.75rem 1.25rem;
 }
 
 .overview-card-container__icon {
-  height: 42px;
-  width: 42px;
-  border-radius: 5px;
+  height: 2.625rem;
+  width: 2.625rem;
+  border-radius: 0.3125rem;
   background-color: #ffffff33;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+}
+
+.ant-table-cell::before {
+  content: none;
+  display: none;
 }
